[Fix][Connector-V2] Keep Typesense tests Java 8 compatible